[gd_scene load_steps=9 format=3 uid="uid://bwina4q0qfyxh"]

[ext_resource type="Script" uid="uid://cyk53h2et7dc" path="res://ui/main_ui/main_ui.gd" id="1_7miss"]
[ext_resource type="FontFile" uid="uid://b5jqc46nd8338" path="res://fonts/m6x11.ttf" id="2_3jxcf"]
[ext_resource type="FontFile" uid="uid://b0rxba54kbo4h" path="res://fonts/m6x11plus.ttf" id="3_3jxcf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_df82o"]
bg_color = Color(0.933333, 0.415686, 0.486275, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_622d5"]
bg_color = Color(0.670588, 0.337255, 0.458824, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3jxcf"]
bg_color = Color(0.447059, 0.862745, 0.733333, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsycw"]
bg_color = Color(0.933333, 0.415686, 0.486275, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bp13i"]
bg_color = Color(0.447059, 0.862745, 0.733333, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[node name="MainUi" type="Control" node_paths=PackedStringArray("end_day_button") groups=["main_ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7miss")
end_day_button = NodePath("MarginContainer/VBoxContainer2/End Day Button")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -126.0
offset_bottom = 136.0
grow_horizontal = 0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.415686, 0.486275, 1)
theme_override_fonts/font = ExtResource("3_3jxcf")
theme_override_font_sizes/font_size = 18
text = "Score: 0"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Day Label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.933333, 0.415686, 0.486275, 1)
theme_override_fonts/font = ExtResource("2_3jxcf")
theme_override_font_sizes/font_size = 16
text = "Day: "

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="StressLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.933333, 0.415686, 0.486275, 1)
theme_override_fonts/normal_font = ExtResource("3_3jxcf")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Stress: [color=#ab5675][shake rate=25.0 level=15 connected=1]5[/shake][/color]/10"
fit_content = true
autowrap_mode = 0

[node name="StressAccumulationBar" type="ProgressBar" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 14)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_df82o")
theme_override_styles/fill = SubResource("StyleBoxFlat_622d5")
max_value = 20.0
value = 10.0
show_percentage = false

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="HoursLabel" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.415686, 0.486275, 1)
theme_override_fonts/font = ExtResource("2_3jxcf")
theme_override_font_sizes/font_size = 16
text = "Hours:"

[node name="End Day Button" type="Button" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(1, 0.905882, 0.839216, 1)
theme_override_colors/font_hover_color = Color(1, 0.905882, 0.839216, 1)
theme_override_colors/font_color = Color(1, 0.905882, 0.839216, 1)
theme_override_colors/font_pressed_color = Color(1, 0.905882, 0.839216, 1)
theme_override_fonts/font = ExtResource("3_3jxcf")
theme_override_font_sizes/font_size = 18
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_3jxcf")
theme_override_styles/hover = SubResource("StyleBoxFlat_bsycw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bp13i")
theme_override_styles/normal = SubResource("StyleBoxFlat_bsycw")
text = "End Day"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/End Day Button" to="." method="_on_end_day_button_pressed"]
